fix: replace all source files with true pre-fix versions
All 22 committed source files were from the tomcat clone HEAD, which
had accumulated commits after each CVE's fix — meaning AppSecAI was
seeing partially or fully patched code. Replaced each with the version
from the parent of its specific fix commit so AppSecAI sees genuine
vulnerable code.

Shared files use the earliest fix commit's parent:
  - AjpProcessor.java     → pre-739c7381 (CVE-2023-34981, CVE-2026-43514)
  - ChunkedInputFilter.java → pre-eb5c094e (CVE-2023-45648, CVE-2026-24880)
  - Http2Parser.java      → pre-810f49d5 (CVE-2024-24549, CVE-2025-31650)
  - Request.java          → pre-2b0ab14f (CVE-2025-48988, -52520, -61795)

SecureNio2Channel.java and AbstractEndpoint.java were already correct
from previous targeted fixes and are unchanged.

All 24 unique source files verified against fix_commit^:uri — 0 mismatches.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>